--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 ---------
-AsciiTerminal - An AsciiPanel Fork By Trystan https://github.com/trystan/AsciiPanel
+AsciiTerminal - A fork from AsciiPanel by Trystan https://github.com/trystan/AsciiPanel
 ---------
